--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "i18next-http-backend": "^2.5.2",
