--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
+    "@mui/material": "^5.15.20",
+    "axios": "^1.7.2",
     "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "i18next-http-backend": "^2.5.2",
+    "mysql2": "^3.10.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
