--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
     "react-scroll-parallax": "^3.4.2",
+    "rsuite": "^5.65.0",
     "swiper": "^8.4.6"
   }
 }
