--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
     "@mui/material": "^5.15.20",
+    "@vercel/postgres": "^0.9.0",
     "axios": "^1.7.2",
     "gsap": "^3.12.5",
     "i18next": "^23.11.5",
@@ -23,11 +24,13 @@
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
     "react-scroll-parallax": "^3.4.2",
     "rsuite": "^5.65.0",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "vercel": "^34.3.0"
   }
 }
